# Kairos

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  fly.toml  kairos.service  pyproject.toml  supabase_schema.sql
.github/workflows/: fly-schedule.yml  market-hours.yml
directives/: TASK-002_refine_alert_strategy.md
directives/adr/: ADR-001_supabase_bridge.md  ADR-002_iv_contraction_cap.md  ADR-003_dynamic_totp_auth.md  ADR-004_gamma_theta_calibration.md  ADR-006_issue_only_health.md  ADR-007_refined_alerting.md  ADR-008_initial_session_alert.md  ADR-008_logging_strategy.md  ADR-009_logging_strategy.md  ADR-010_cycle_level_oi_delta.md  ADR-011_dte_scaled_iv_thresholds.md  ADR-011_move_ratio_time_scaling.md  ADR-012_iv_cap_hysteresis.md  ADR-013_lunch_break_alert.md  ADR-014_market_trend_phases.md  ADR-015_granular_condition_alerting.md  ADR-016_trend_phase_oi_scoring.md  ADR-017_sustained_oi_window.md  ADR-018_greeks_aware_oi_engine.md  ADR-019_fly_io_docker_deployment.md  ADR-020_fly_io_scale_to_zero_schedule.md  ADR-021_oi_flow_rolling_consensus.md  ADR-022_dynamic_supabase_auth.md  ADR-023_oi_flow_rolling_window.md  INDEX.md
directives/briefs/: TASK-001_problem-brief.md  (+3 more)
docs/: discord_oi_flow_reference.md  discord_trading_cheatsheet.md  integration.md  scoring_architecture.md
execution/: control_panel.py
tests/: conftest.py  test_db.py  test_engine.py  test_engine_extra.py  test_fetcher.py  test_notifier.py  test_oi_flow.py  test_processor.py  test_processor_extra.py  test_scheduler.py  test_scheduler_extra.py
(+13 files in other folders)
