[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos"
version = "0.1.0"
description = "NIFTY options scalping environment monitor"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "supabase>=2.4.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
